# chateria

./: README.md
backend/: Base64.cpp  CMakeLists.txt  GlobalData.cpp  GlobalData.h  README.md  ThreadData.cpp  ThreadData.h  WebsocketContent.cpp  WebsocketContent.h  main.cpp
frontend/: package.json
frontend/src/: App.js  index.js
frontend/src/components/: HomePage.js  Room.js  SelectRoomView.js  Websocket.js
frontend/src/css/: HomePage.css  Room.css
testClient/: CMakeLists.txt  README.md  main.cpp
